<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/appBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_label_reminder"
            android:id="@+id/setting_remind_me"
            android:layout_below="@+id/linearLayout"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout"
            android:fontFamily="@string/action_setting"
            android:textSize="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText_reminderDays"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_label_reminder_days"
            android:id="@+id/setting_days"
            android:layout_below="@+id/linearLayout"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout"
            android:fontFamily="@string/action_setting"
            android:textSize="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textIsSelectable="true"
            android:textStyle="normal|bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:id="@+id/linearLayout_2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_label_notification"
            android:id="@+id/setting_notification"
            android:layout_below="@+id/linearLayout"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout"
            android:fontFamily="@string/action_setting"
            android:textSize="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold"
            android:enabled="true" />


        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switch_notification"
            android:layout_gravity="right" />


    </LinearLayout>



</LinearLayout>
